# higgins

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.yaml
.github/workflows/: miri.yaml  pr.yaml
higgins-cli/: Cargo.toml
higgins-cli/src/: main.rs  ping.rs
higgins-client/: Cargo.toml
higgins-client/src/: client.rs  configuration.rs  error.rs  functions.rs  lib.rs  ping.rs  produce.rs  query.rs  subscription.rs
higgins-codec/: Cargo.toml  build.rs
higgins-codec/proto/: higgins.proto
higgins-codec/src/: errors.rs  frame.rs  lib.rs
higgins-core/: .gitignore  Cargo.toml
higgins-core/src/: broker.rs  config.rs  error.rs  lib.rs  main.rs  wasmtime.rs
higgins-core/src/broker/: configuration.rs  consume.rs  default.rs  indexes.rs  instantiate.rs  produce.rs  streams.rs  subscriptions.rs
higgins-core/src/client/: mod.rs
higgins-core/src/derive/: joining.rs  map.rs  mod.rs  reduce.rs  utils.rs
higgins-core/src/derive/joining/: full_join.rs  inner_join.rs  join.rs  mapping.rs  opts.rs  outer_join.rs
higgins-core/src/functions/: collection.rs  map.rs  mod.rs  reduce.rs
higgins-core/src/storage/: arrow_ipc.rs  batch_coordinate.rs  dereference.rs  index.rs  indexes.rs  mod.rs  shared_log_segment.rs
higgins-core/src/storage/index/: default.rs  directory.rs  error.rs  file.rs  index_reader.rs  index_writer.rs  joined_index.rs  mod.rs
higgins-core/src/subscription/: error.rs  mod.rs
higgins-core/src/topography/: config.rs  errors.rs  mod.rs
higgins-core/src/utils/: consumption.rs  mod.rs  request_response.rs
higgins-core/subscriptions/37b93fd3-2f47-43fd-a279-cda6daf2bb36/: IDENTITY  LOG  MANIFEST-000005
higgins-core/subscriptions/4e9ef771-a0e4-430a-9bd0-e72ad0de8212/: IDENTITY  LOG  MANIFEST-000005
higgins-core/subscriptions/b5c9cbd0-87b5-4f1d-acbd-7ded02973d7e/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
higgins-core/subscriptions/ce5fe844-13e1-4617-9cf7-5ec4c7f85482/: IDENTITY  LOG  MANIFEST-000005
higgins-core/test_base/data/: 13d93957-c585-49a1-9ade-fa96fc1474de
higgins-core/test_base/subscriptions/0d258640-dba9-4f0e-956b-c529d953b1ed/: IDENTITY  LOG  MANIFEST-000005
higgins-core/test_base/subscriptions/111135fa-6fcc-4d02-801b-7b357aeb5885/: IDENTITY  LOG  MANIFEST-000005
higgins-core/test_base/subscriptions/987666ae-7f08-4658-b4fe-181624e472c1/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000009
higgins-core/test_base/subscriptions/f2bcbb56-0ed4-4ccd-abf7-31e93aaec4e7/: IDENTITY  LOG  MANIFEST-000005
higgins-core/tests/: basic.rs  basic_config.yaml  basic_join.rs  basic_map.rs  basic_reduce.rs  customer.json  interleaving_produce_consume.rs  multi_produce.rs  query_latest.rs  updating_subscription.rs
higgins-core/tests/common/: configuration.rs  data.rs  functions.rs  mod.rs  ping.rs  port.rs  query.rs  subscription.rs
higgins-core/tests/configs/: basic_config.toml  basic_config.yaml  join_config.toml  join_config.yaml  map_config.toml  map_config.yaml  reduce_config.toml
higgins-core/tests/functions/basic-map/: Cargo.toml
higgins-core/tests/functions/basic-map/src/: lib.rs
higgins-core/tests/functions/basic-reduce/: Cargo.toml
higgins-core/tests/functions/basic-reduce/src/: lib.rs
higgins-core/tests/old_tests/: basic_join.rs  basic_map.rs  interleaving_produce_consume.rs  query_latest.rs  updating_subscription.rs
higgins-functions/: Cargo.toml  build.rs
higgins-functions/headers/: arrow.h  recordbatch.h
higgins-functions/src/: errors.rs  lib.rs  utils.rs
higgins-functions/src/array/: mod.rs
higgins-functions/src/record_batch/: from_ffi.rs  mod.rs  to_ffi.rs  wasm.rs
higgins-functions/src/schema/: mod.rs
higgins-functions/src/types/: arbitrary_length_buffer.rs  array.rs  mod.rs  record_batch.rs  schema.rs  wasm_ptr.rs
higgins-functions/tests/: map_value.rs  simple_addition.rs  simple_record_batch.rs
higgins-functions/tests/example_record_batch/: Cargo.toml
higgins-functions/tests/example_record_batch/src/: lib.rs
higgins-functions/tests/example_wasm/: Cargo.toml  README.md
higgins-functions/tests/example_wasm/src/: lib.rs
src/: broker.rs  client.rs  config.rs  main.rs
src/index/: mod.rs
src/storage/: indexes.rs  (+2 more)
(+5 files in other folders)
