[workspace]
resolver = "3"
members = [
    "higgins-cli",
    "higgins-codec",
    "higgins-core",
    "higgins-functions",
    "higgins-functions/tests/example_wasm",
]
exclude = ["higgins-functions/tests/example_wasm"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = { version = "2" }
