[package]
name = "higgins"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { version = "55.0.0", features = ["ffi"] }
arrow-json = "55.1.0"
async-trait = "0.1.88"
bytes = "1.10.1"
riskless = "0.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }

# Higgins 
higgins-codec = { path = "../higgins-codec" }
higgins-functions = { path = "../higgins-functions" }
prost = "0.13.5"
thiserror = "2.0.12"
rocksdb = "0.23.0"
rkyv = "0.8.10"


[dev-dependencies]
get-port = "4.0.0"
tempfile = "3.10"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
loom = { version = "0.7.2", features = ["futures"] }
serde_json = "1.0.140"
