[package]
name = "higgins-functions"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { version = "55.1.0", features = ["ffi"] }
bitflags = "2.9.1"
log = "0.4.27"
wasmtime = { version = "33.0.0", optional = true }
thiserror = {workspace = true, optional =  true}


[build-dependencies]
bindgen = "0.71.0"

[features]
default = ["full"]
full = ["dep:wasmtime", "dep:thiserror"]
